# crucible

./: .gitignore  README.md  SPEC.md  pyproject.toml  run.py
docs/: EVOLUTION.md
docs/superpowers/plans/: 2026-06-28-minimal-agentic-orchestrator.md
orchestrator/: __init__.py  augmentation.py  budget.py  config.py  constants.py  critic.py  errors.py  json_extract.py  llm.py  models.py  observers.py  orchestrator.py  plan_validation.py  redaction.py  roles.py  synthesizer.py  worker.py
orchestrator/tools/: files.py  registry.py  shell.py
tests/: test_augmentation.py  test_budget.py  test_config.py  test_critic.py  test_e2e_fixture.py  test_json_extract.py  test_llm.py  test_models.py  test_observers.py  test_orchestrator.py  test_plan_validation.py  test_redaction.py  test_roles.py  test_synthesizer.py  test_worker.py
tests/tools/: test_files.py  test_registry.py  test_shell.py
