[project]
name = "orchestrator"
version = "0.1.0"
description = "Minimal agentic orchestrator: small-model DAG harness with critic-gated workers"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.40",
    "pydantic>=2.7",
]

[project.optional-dependencies]
trace = ["langfuse>=2.0"]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["orchestrator*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
